[gd_scene load_steps=34 format=2]

[ext_resource path="res://BG.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/L2_lab/break_room_fire_fence_thingy.png" type="Texture" id=2]
[ext_resource path="res://sprites/L2_lab/break_room.png" type="Texture" id=3]
[ext_resource path="res://sprites/L2_lab/break_room_fire1.png" type="Texture" id=4]
[ext_resource path="res://sprites/L2_lab/break_room_fire0.png" type="Texture" id=5]
[ext_resource path="res://sprites/L2_lab/break_room_fire2.png" type="Texture" id=6]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/L2_lab/break_room_dark.png" type="Texture" id=8]
[ext_resource path="res://Levels/1.0 - Lab/BreakRoom.gd" type="Script" id=9]
[ext_resource path="res://sprites/L2_lab/break_room_fg.png" type="Texture" id=10]
[ext_resource path="res://sprites/L2_lab/break_room_bear.png" type="Texture" id=11]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=12]
[ext_resource path="res://hitnhurtboxes/TransitionZone.tscn" type="PackedScene" id=13]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=14]
[ext_resource path="res://Levels/1.0 - Lab/RobotSprite.tscn" type="PackedScene" id=15]
[ext_resource path="res://Levels/1.0 - Lab/blanket_dog.tscn" type="PackedScene" id=16]
[ext_resource path="res://tunes/lab/alarm.wav" type="AudioStream" id=17]
[ext_resource path="res://sprites/L2_lab/blanket.png" type="Texture" id=18]
[ext_resource path="res://hitnhurtboxes/SeenBox.tscn" type="PackedScene" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 83.0743, 28.1744 )

[sub_resource type="Animation" id=3]
resource_name = "back_off"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/ROBOT/robot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/ROBOT/robot:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/ROBOT/robot:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "there_we_go"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("YSort/blanket_dog:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("YSort/ROBOT:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 937.248, 760.477 ), Vector2( 937.248, 869.699 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/ROBOT/robot:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/blanket_dog:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "leave"
length = 2.4
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/ROBOT/robot:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1.2, 1.5, 1.8, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "sitright", "right", "down", "right", "down", "up" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/ROBOT/robot:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/ROBOT:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 1.2, 1.5, 1.8, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 756.064, 651.255 ), Vector2( 756.064, 651.255 ), Vector2( 846.707, 651.255 ), Vector2( 846.707, 745.839 ), Vector2( 941.291, 745.839 ), Vector2( 941.291, 892.97 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("YSort/ROBOT:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "bye_bye"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "really_leave"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/ROBOT/robot:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "down" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/ROBOT:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 941.291, 892.97 ), Vector2( 941.291, 929.753 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/ROBOT:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("YSort/ROBOT/robot:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "cutscene_over"
} ]
}

[sub_resource type="Animation" id=7]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/ROBOT/robot:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "up", "left", "up", "left", "right", "sitright" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/ROBOT/robot:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/ROBOT/robot:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "talk_lots"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("YSort/ROBOT:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 937.248, 869 ), Vector2( 937.248, 770.155 ), Vector2( 843.234, 770.155 ), Vector2( 843.234, 651.255 ), Vector2( 754.75, 651.255 ) ]
}

[sub_resource type="Animation" id=8]
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/ROBOT/robot:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/ROBOT/robot:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/ROBOT/robot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("YSort/ROBOT/robot:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "nice_n_cozy"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("YSort/ROBOT/robot:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "dogup" ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("YSort/ROBOT:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 937.248, 915.324 ), Vector2( 937.248, 760.477 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("YSort/ROBOT:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 80.0142, 64.5664 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 57.8392, 62.1025 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 82.4779, 78.1178 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 53.0645, 135.414 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 76.4616, 77.2741 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 61.9308, 63.8613 )

[node name="BreakRoom" type="Node2D"]
script = ExtResource( 9 )

[node name="break_room" type="Sprite" parent="."]
visible = false
position = Vector2( 919.218, 526.198 )
texture = ExtResource( 3 )

[node name="break_room_dark" type="Sprite" parent="."]
position = Vector2( 921.291, 529.565 )
texture = ExtResource( 8 )

[node name="fire" type="AnimatedSprite" parent="."]
pause_mode = 2
position = Vector2( 929.088, 445.618 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="break_room_fire_fence_thingy" type="Sprite" parent="."]
position = Vector2( 930.185, 481.506 )
texture = ExtResource( 2 )

[node name="blanket" type="Sprite" parent="."]
visible = false
position = Vector2( 933.973, 649.656 )
texture = ExtResource( 18 )

[node name="BG" parent="." instance=ExtResource( 1 )]
margin_left = -193.096
margin_top = -370.532
margin_right = 2628.91
margin_bottom = 1734.47

[node name="YSort" type="YSort" parent="."]

[node name="teatable" type="Node2D" parent="YSort"]
position = Vector2( 730.488, 701.76 )

[node name="break_room_fg" type="Sprite" parent="YSort/teatable"]
position = Vector2( 5.65167, -17.854 )
texture = ExtResource( 10 )

[node name="Node2D" type="Node2D" parent="YSort"]
position = Vector2( 1095.98, 821.672 )

[node name="break_room_bear" type="Sprite" parent="YSort/Node2D"]
position = Vector2( -5.42365, 43.6035 )
texture = ExtResource( 11 )

[node name="blanket_dog" parent="YSort" instance=ExtResource( 16 )]
position = Vector2( 938.831, 613.478 )

[node name="ROBOT" type="Node2D" parent="YSort"]
position = Vector2( 941.291, 892.97 )

[node name="robot" parent="YSort/ROBOT" instance=ExtResource( 15 )]
position = Vector2( -7.36664, -113.317 )
animation = "up"

[node name="player" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 934.822, 674.19 )
camera = NodePath("../../PuppyCamera")

[node name="DoorTZ" parent="." instance=ExtResource( 13 )]
position = Vector2( 932.987, 973.315 )

[node name="CollisionShape2D" parent="DoorTZ" index="0"]
position = Vector2( -1.08997, 11.9893 )
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 870.71, 546.069, 988.423, 546.069, 1017.06, 507.892, 1059.52, 507.929, 1102.03, 487.059, 1166.62, 504.724, 1163.86, 841.193, 1102.78, 831.13, 1043.54, 835.457, 1034.56, 891.999, 1014.43, 937.631, 1008.72, 1039.61, 1264.85, 1044.82, 1264.85, 345.329, 509.456, 350.53, 548.461, 999.31, 857.899, 1011.01, 864.885, 927.631, 777.203, 924.684, 738.284, 847.191, 691.479, 831.589, 670.676, 789.984, 712.281, 756.18, 774.689, 763.981, 791.94, 713.954, 680.262, 714.338, 685.231, 508.976, 820.284, 512.096 )

[node name="PuppyCamera" parent="." instance=ExtResource( 14 )]
position = Vector2( 930.47, 627.251 )

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( -154.759, -274.366 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 2224.97, 1267 )

[node name="DoorSP" parent="." instance=ExtResource( 12 )]
position = Vector2( 935.546, 868.151 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/back_off = SubResource( 3 )
anims/default = SubResource( 4 )
anims/leave = SubResource( 5 )
anims/really_leave = SubResource( 6 )
anims/sit_down = SubResource( 7 )
anims/walk_in = SubResource( 8 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )
bus = "Effects"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SeenZones" type="Node2D" parent="."]

[node name="fire" parent="SeenZones" instance=ExtResource( 19 )]
position = Vector2( 930.135, 480.013 )

[node name="CollisionShape2D" parent="SeenZones/fire" index="0"]
position = Vector2( 0, -18.4791 )
shape = SubResource( 9 )

[node name="teaset" parent="SeenZones" instance=ExtResource( 19 )]
position = Vector2( 733.025, 672.195 )

[node name="CollisionShape2D" parent="SeenZones/teaset" index="0"]
position = Vector2( 1.23193, 3.6958 )
shape = SubResource( 10 )

[node name="bear" parent="SeenZones" instance=ExtResource( 19 )]
position = Vector2( 1122.32, 871.77 )

[node name="CollisionShape2D" parent="SeenZones/bear" index="0"]
position = Vector2( -20.943, 1.23193 )
shape = SubResource( 11 )

[node name="pillows1" parent="SeenZones" instance=ExtResource( 19 )]
position = Vector2( 1113.26, 640.733 )

[node name="CollisionShape2D" parent="SeenZones/pillows1" index="0"]
shape = SubResource( 12 )

[node name="pillows2" parent="SeenZones" instance=ExtResource( 19 )]
position = Vector2( 928.903, 465.229 )

[node name="CollisionShape2D" parent="SeenZones/pillows2" index="0"]
position = Vector2( -176.604, 380.033 )
shape = SubResource( 13 )

[node name="pillows3" parent="SeenZones" instance=ExtResource( 19 )]
position = Vector2( 928.903, 465.229 )

[node name="CollisionShape2D" parent="SeenZones/pillows3" index="0"]
position = Vector2( -187.781, 58.1227 )
shape = SubResource( 14 )
[connection signal="unwrapped" from="YSort/blanket_dog" to="." method="_on_blanket_dog_unwrapped"]
[connection signal="transition_triggered" from="DoorTZ" to="." method="_on_DoorTZ_transition_triggered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="seen" from="SeenZones/fire" to="." method="_on_fire_seen"]
[connection signal="seen" from="SeenZones/teaset" to="." method="_on_teaset_seen"]
[connection signal="seen" from="SeenZones/bear" to="." method="_on_bear_seen"]
[connection signal="seen" from="SeenZones/pillows1" to="." method="_on_pillows1_seen"]
[connection signal="seen" from="SeenZones/pillows2" to="." method="_on_pillows2_seen"]
[connection signal="seen" from="SeenZones/pillows3" to="." method="_on_pillows3_seen"]

[editable path="DoorTZ"]

[editable path="PuppyCamera"]

[editable path="SeenZones/fire"]

[editable path="SeenZones/teaset"]

[editable path="SeenZones/bear"]

[editable path="SeenZones/pillows1"]

[editable path="SeenZones/pillows2"]

[editable path="SeenZones/pillows3"]
